Added: memoName to save depends on course offerings
